Make cont scroll on overflow, also fixes minimum width issue for some reason

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -112,6 +112,8 @@ form {
 }
 
 #cont {
+	overflow-y: auto;
+
 	> * {
 		margin: 8px;
 	}
